# MadOS

./: Makefile  Makefile.in  README.md  config.h  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
doc/: MadOS trees  Makefile  Makefile.in
examples/: Makefile  Makefile.am  Makefile.in
include/: Makefile  Makefile.am  Makefile.in  exec.h  fat.h  font.h  fs.h  madmath.h  madstd.h  memory.h  mfs.h  module.h  multiboot.h  page.h  shell.h  stdio.h  stdlib.h  vga.h  video.h
os/: bochs.cfg  init.elf  initrd.img  kernel  mados.img  mfs.img
os/mnt/boot/: kernel
os/mnt/etc/: boot.cfg
src/: Makefile  Makefile.arm  Makefile.in  Makefile.x86  boot.s  dict.c  kernel  kernel.c  madstd.c  memory.c  ramdisk.c  shell.c  stdio.c  stdlib.c  string.c  vga.c
src/.deps/: kernel.Po
src/arm/: boot.s  linker.ld  machine.h  uart.c
src/exec/: elf.c  elf32  elf32.c  elf32.s  exec.c
src/extra/: shell.c
src/fs/: fat  fat.c  fat.s  fat12  fat12.s  fat12_format_stub.s  fat32  fat32.s  fs.c  mfs  mfs.c  mfs.s  test
src/x86/: boot.s  gdt.c  idt.c  irq.c  isr.c  keyboard.c  linker.ld  machine.h  page.c  port.c  tables.s  timer.c  vga.c
src/x86/fonts/: c64-16.c  c64-8.c  latin-16.c  latin-8.c  matrix-16.c  matrix-8.c  terminus-16.c  terminus-8.c
