#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(MadOS, version-0.1, aaronryool@gmail.com)
AM_INIT_AUTOMAKE(pippo, 2.6)

AC_CONFIG_SRCDIR([src/])
AC_CONFIG_HEADERS([config.h])

AM_PROG_AS
AC_PROG_CC
AC_LANG(C)

AC_OUTPUT(Makefile src/Makefile include/Makefile doc/Makefile examples/Makefile)
